# dwe_multicamera_parser

./: CMakeLists.txt  README.md  package.xml
config/: camera_1.yaml  camera_2.yaml
include/dwe_ros2_parser/: dwe_ros2_parser.hh
launch/: dwe_ros2_dual.launch.py  dwe_ros2_record.launch.py
scripts/: start_stitched_pipeline
src/: camera_info_publisher.cc  dwe_ros2_parser.cc
